# LinSync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  _review_diff.txt  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/linsync-gui/: Cargo.toml  build.rs
apps/linsync-gui/cpp/: linsync_translator.h
apps/linsync-gui/i18n/: linsync_de.ts  linsync_en.ts  linsync_es.ts  linsync_fr.ts  linsync_ja.ts  linsync_zh_CN.ts
apps/linsync-gui/qml/: AboutPage.qml  AppAboutPage.qml  AppButton.qml  AppCard.qml  AppCheckBox.qml  AppComboBox.qml  AppSpinBox.qml  AppTextField.qml  CreditsPage.qml  CxxQtSmoke.qml  DesignTokens.qml  DiffEditorPane.qml  DiffOverviewRuler.qml  DocumentComparePage.qml  FilePickerBar.qml  FiltersPage.qml  GplLicenseText.qml  ImageComparePage.qml  ImagePane.qml  LicensesPage.qml  LinSyncNavItem.qml  Main.qml  MergePage.qml  PluginsPage.qml  SessionsPage.qml  SettingsPage.qml  TableComparePane.qml  UrlInputBar.qml  WebpageComparePage.qml
apps/linsync-gui/src/: bridge.rs  cxxqt_session.rs  cxxqt_smoke.rs  icon_theme.cpp  icon_theme.rs  lib.rs  main.rs  tests.rs
apps/linsync-gui/tests/: archive_edit_bridge.rs  document_compare_bridge.rs  filters_bridge.rs  image_compare_bridge.rs  plugins_bridge.rs  settings_bridge.rs  webpage_compare_bridge.rs
assets/: README.md
crates/linsync-cli/: Cargo.toml
crates/linsync-cli/src/: archive.rs  cache_cmd.rs  compare.rs  completions.rs  filter_cmd.rs  folders.rs  format.rs  hex_cmd.rs  main.rs  man.rs  merge.rs  parsing.rs  patch_cmd.rs  plugin_cmd.rs  profile_cmd.rs  project_cmd.rs  report.rs  reveal.rs  session_cmd.rs  table_cmd.rs  webpage_cmd.rs
crates/linsync-cli/tests/: cli.rs  document_compare_cli.rs  image_compare_cli.rs  plugin_cli.rs  profile_cli.rs  webpage_cli.rs
crates/linsync-core/: Cargo.toml
crates/linsync-core/benches/: compare_bench.rs
crates/linsync-core/src/: archive.rs  archive_write.rs  binary.rs  document.rs  filter.rs  folder.rs  image.rs  lib.rs  logging.rs  merge.rs  paths.rs  plugin.rs  storage.rs  syntax.rs  table.rs  text.rs  trash.rs  webpage.rs
crates/linsync-core/src/archive_write/: format.rs
crates/linsync-core/src/profile/: builtin.rs  mod.rs
crates/linsync-core/tests/: archive_member_repack.rs  common.rs  diff_invariants.rs  document_e2e.rs  document_types.rs  folder_delete_executes.rs  image_compare.rs  integration.rs  ocr_positions.rs  permissions_compare.rs  plugin_archive_e2e.rs  plugin_discovery.rs  plugin_sandbox_basic.rs  plugin_sandbox_stress.rs  plugin_unpack_folder.rs  settings_round_trip.rs  symlink_compare.rs  web_fetch_plugin.rs
crates/linsync-sandbox/: Cargo.toml
crates/linsync-sandbox/src/: bubblewrap.rs  landlock.rs  lib.rs  policy.rs  seccomp.rs
crates/linsync-sandbox/tests/: sandbox_integration.rs
crates/linsync-webengine/: Cargo.toml
crates/linsync-webengine/src/: lib.rs
docs/: SECURITY.md  accessibility-audit-1.0.md  archive-support.md  archive-write-safety-design.md  archive-write-safety.md  bootstrap.md  command-line-parity.md  comparison-behavior-audit.md  design-consistency-with-grexa.md  document-compare-implementation.md  document-ocr-compare.md  engine-decisions.md  feature-matrix.md  feature-parity.md  file-manager-integration.md  fixture-provenance.md  git-integration.md  image-compare-design.md  known-limitations-1.0.md  licensing.md  linux-decisions.md  linux-metadata-mapping.md  localization.md  migration-from-desktop-diff-tools.md  parity-acceptance.md  performance-budgets.md  plugin-protocol.md  qt-bridge-spike.md  rendered-diff-modes-design.md  sandbox-design.md  scope-gates.md  security.md  settings-storage-decision.md  third-party-crates.json  third-party-notices.md  user-guide.md  webpage-compare-implementation.md  webpage-compare.md
docs/a11y/: orca-walkthrough.md
docs/superpowers/plans/: 2026-05-26-linsync-gui-wiring-and-feature-completion.md  2026-05-26-phase-6-sandbox-implementation.md  2026-05-26-phase-7-image-compare-implementation.md  2026-05-26-phase-8-document-compare-implementation.md  2026-05-26-phase-9-webpage-compare-implementation.md
packaging/: com.visorcraft.LinSync.desktop  com.visorcraft.LinSync.metainfo.xml  com.visorcraft.LinSync.mime.xml
packaging/appimage/: README.md  build-appdir.sh
packaging/arch/: PKGBUILD  README.md
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/distro/: README.md  git-mergetool.gitconfig
packaging/dolphin/: com.visorcraft.LinSync.desktop
packaging/flatpak/: README.md  com.visorcraft.LinSync.yml
packaging/plugins/libreoffice-extract/: libreoffice-extract.sh  linsync-plugin.json
packaging/plugins/pdf-render/: linsync-plugin.json  pdf-render.sh
packaging/plugins/pdf-to-text/: linsync-plugin.json  pdf-to-text.sh
packaging/plugins/tar-unpacker/: linsync-plugin.json  tar-unpacker
packaging/plugins/tesseract-ocr/: linsync-plugin.json  tesseract-ocr.sh
packaging/plugins/web-fetch/: linsync-plugin.json  web-fetch
packaging/plugins/zip-unpacker/: linsync-plugin.json  zip-unpacker
packaging/rpm/: Containerfile.fedora44  README.md  build-in-container.sh  container-entrypoint.sh  linsync.spec
scripts/: README.md  check-credits.sh  check-docs-drift.sh  check-parity-acceptance.py  generate-credits.py  generate-large-folder-fixture.sh  gui-screenshot.sh  gui-smoke.sh  l10n-report.py  release-smoke.sh  release-vm-validation.sh
tests/fixtures/archive/: build.sh
tests/fixtures/document/: build.sh  simple.odt
tests/fixtures/folders/left/: different.txt
tests/fixtures/folders/right/: different.txt  right-only.txt
tests/fixtures/image/: checker.ppm
tests/fixtures/permissions/: README.txt  build.sh
tests/fixtures/symlink/: README.txt  build.sh
tests/fixtures/table/: left.csv  right.csv
tests/fixtures/text/: base.txt  equal-left.txt  left.txt  right.txt
tests/fixtures/webcompare/: encoding.html  redirect_target.html  simple.html
