[package]
name = "linsync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sandbox"]
sandbox = ["dep:linsync-sandbox"]
image-compare = ["dep:image", "dep:lab"]
image-avif = ["image-compare", "image/avif"]
web-engine = ["dep:linsync-webengine"]
document-compare = []

[dependencies]
blake3.workspace = true
crc32fast.workspace = true
sha2.workspace = true
image = { workspace = true, optional = true }
lab = { workspace = true, optional = true }
libc.workspace = true
linsync-sandbox = { workspace = true, optional = true }
linsync-webengine = { path = "../linsync-webengine", optional = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3"
httptest = "0.16"
serde_json = { workspace = true }

[[bench]]
name = "compare_bench"
harness = false
